--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <!-- Customer Info -->
             <div class="flex space-x-4">
               <img
-                src="images/profile-1.jpg"
+                src="images/Profile-1.jpg"
                 alt=""
                 class="w-10 h-10 rounded-full"
               />
